# resql

./: .cirrus.yml  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  codecov.yml
.github/workflows/: .aarch64.yml  .armv6.yml  .armv7.yml  .c.yml  .coverage.yml  .docker.yml  .go.yml  .java.yml  .macos.yml  .maven.yml  .ppc64le.yml  .release.yml  .s390x.yml  .ubuntu.yml  codeql-analysis.yml
c/: resql.c  resql.h  resqlc_test.c
c-client/: CMakeLists.txt  resql.c  resql.h  resqlc_test.c
cli/: CMakeLists.txt  resql_cli.c
clients/c/: CMakeLists.txt  resql.c  resql.h  resqlc_test.c
clients/cli/: CMakeLists.txt  resql_cli.c
clients/go/: buffer.go  client.go  client_test.go  go.mod
clients/java/: pom.xml
clients/java/src/main/java/resql/: Client.java  Config.java  Msg.java  Prepared.java  PreparedStatement.java  RawBuffer.java  Resql.java  ResqlClient.java  ResqlException.java  ResqlFatalException.java  ResqlSQLException.java  Result.java  ResultSet.java  Row.java
clients/java/src/test/java/resql/: BasicTest.java  MultiTest.java
clients/java/src/test/java/resql/benchmark/: BenchmarkSimple.java  LatencyTest.java
clients/java/src/test/java/resql/example/: AtomicIntegerTest.java  Example.java  KeyValueTest.java
cresql/: CMakeLists.txt  resql.c  resql.h  resqlc_test.c
go/: client.go  go.mod
go/resql/: client.go
goresql/: LICENSE  buffer.go  client.go  client_test.go  go.mod
goresql/resql/: buffer.go  client.go  client_test.go
java/: LICENSE  pom.xml
java-client/: pom.xml
java-client/src/main/java/resql/: Client.java  Msg.java  RawBuffer.java  Resql.java  ResqlSQLException.java  Result.java  ResultSet.java
java-client/src/test/java/resql/: BasicTest.java  MultiTest.java
java-client/src/test/java/resql/benchmark/: BenchmarkSimple.java  LatencyTest.java
java-client/src/test/java/resql/example/: AtomicIntegerTest.java  KeyValueTest.java
java/src/main/java/resql/: Resql.java  ResqlFatalException.java  Row.java
jresql/: .gitignore  LICENSE  pom.xml
jresql/src/main/java/resql/: Client.java  Config.java  Msg.java  Prepared.java  PreparedStatement.java  RawBuffer.java  Resql.java  ResqlClient.java  ResqlException.java  ResqlFatalException.java  ResqlSQLException.java  Result.java  ResultSet.java  Row.java
jresql/src/test/java/resql/: BasicTest.java  MultiTest.java  TimestampTest.java
jresql/src/test/java/resql/benchmark/: BenchmarkSimple.java  LatencyTest.java
jresql/src/test/java/resql/example/: AtomicIntegerTest.java  Example.java  KeyValueTest.java
lib/: .clang-format  .clang-tidy
lib/hdr/: hdr_histogram.c
lib/linenoise/: linenoise.h
lib/sc/: sc_array.h  sc_crc32.c  sc_log.h  sc_map.c  sc_signal.c  sc_sock.c  sc_time.c  sc_timer.c
lib/sqlite/: series.c
main/: CMakeLists.txt  main.c  trainer.c
src/: CMakeLists.txt  aux.c  aux.h  client.c  client.h  cmd.c  cmd.h  conf.c  conf.h  config.h  conn.c  conn.h  entry.c  entry.h  file.c  file.h  info.c  info.h  main.c  meta.c  meta.h  metric.c  metric.h  msg.c  msg.h  node.c  node.h  page.c  page.h  rs.c  rs.h  server.c  server.h  session.c  session.h  settings.c  settings.h  snapshot.c  snapshot.h  state.c  (+4 more)
src/sc/: config.h  sc.c  sc_array.c  sc_array.h  sc_buf.c  sc_buf.h  sc_crc32.c  sc_ini.c  sc_log.h  sc_map.c  sc_map.h  sc_mutex.c  sc_mutex.h  sc_queue.c  sc_queue.h  sc_signal.c  sc_signal.h  sc_sock.c  sc_sock.h  sc_str.c
src/sqlite/: sqlite3.h
test/: CMakeLists.txt  add_test.c  c_client_test.c  client_test.c  cluster_test.c  config_test.c  entry_test.c  leader_test.c  meta_test.c  msg_test.c  page_test.c  remove_test.c  restart_test.c  session_test.c  single_test.c  snapshot_test.c  state_test.c  store_test.c  test_util.c  test_util.h
test/example/: CMakeLists.txt  any_test.c  change_test.c  cluster2_test.c  multi_test.c  single_test.c
util/: bump.sh
util/benchmark/: CMakeLists.txt  resql_benchmark.c
util/cli/: CMakeLists.txt  linenoise.c  resql_cli.c  sc_uri.h
util/daemon/: resql.service
util/docker/alpine/: Dockerfile  docker-entrypoint.sh
util/docker/debian/: Dockerfile
